Bug 395564 - "scrollbar's arrow buttons should be disabled when they can't scroll further" [p=twanno@lycos.nl (Teune van Steeg) r+sr=roc a1.9=schrep]